# PocketCompute

./: .gitignore  LICENSE  README.md
.pc-test/: config.json
agent/: pyproject.toml  requirements.txt
agent/pocketcompute/: __init__.py  __main__.py  auth.py  config.py  executor.py  files.py  jobs.py  server.py  system.py
scripts/: install-autostart.ps1  make_icons.py  start.ps1
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
