[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketcompute"
version = "0.1.0"
description = "Message your computer. A mobile-first interface for your personal machine."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shresth" }]
keywords = ["remote", "agent", "devops", "mobile", "automation", "websocket", "self-hosted"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psutil>=5.9.8",
    "PyJWT>=2.8",
    "qrcode>=7.4",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.535"]

[project.scripts]
pocketcompute = "pocketcompute.__main__:main"
pc-agent = "pocketcompute.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketcompute*"]
